# pawpyrus

./: .gitignore  README.md  pawpyrus-decode.py  pawpyrus-encode.py  pawpyrus.py  pyproject.toml
examples/decoder_debug_mode/: blocks.txt  detection_stats.json
src/pawpyrus/: pawpyrus.py  test_papyrus.py
src/pawpyrus/test/: test_pawpyrus.py
tests/: test_decode_normal.sh  test_encode_normal.sh  test_pubkey.gpg
tests/data/Hemingway_Scans_300dpi/: unrecognized.txt
tests/output/debug/: blocks.txt
