[build-system]
requires = [ "hatchling" ]
build-backend = "hatchling.build"

[project]
name = "pawpyrus"
version = "2022.8.7"
authors = [ { name = "Emil Viesná", email="regnveig@yandex.ru" } ]
description = "A minimalist paper data storage based on QR codes"
keywords = ["data storage", "paper", "QR", "ArUco"]
readme = "README.md"
license = "GPL-3.0-or-later"
requires-python = ">= 3.10"
dependencies = [
	"bitarray",
	"more-itertools",
	"numpy",
	"opencv-contrib-python",
	"opencv-python",
	"qrcode",
	"reportlab",
	"svglib",
	"tqdm"
]
classifiers = [
	"Programming Language :: Python :: 3.10",
	"License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
	"Operating System :: OS Independent",
	"Natural Language :: English",
	"Development Status :: 3 - Alpha",
	"Environment :: Console"
]

[project.scripts]
pawpyrus = "pawpyrus.pawpyrus:main"

[project.urls]
"Homepage" = "https://github.com/regnveig/pawpyrus"
"Bug Tracker" = "https://github.com/regnveig/pawpyrus/issues"
