[build-system]
requires = [ "hatchling" ]
build-backend = "hatchling.build"

[project]
name = "pawpyrus"
version = "2022.8.7.3"
authors = [ { name = "Emil Viesná", email="regnveig@yandex.ru" } ]
description = "A minimalist paper data storage based on QR codes"
keywords = ["data storage", "paper", "QR", "ArUco"]
readme = "README.md"
license = "GPL-3.0-or-later"
requires-python = ">= 3.8"
dependencies = [
	"bitarray >= 1.6.3",
	"more-itertools >= 8.14.0",
	"numpy >= 1.23.1",
	"opencv-contrib-python >= 4.6.0.66",
	"opencv-python >= 4.6.0.66",
	"pyzbar >= 0.1.9",
	"qrcode >= 7.3.1",
	"reportlab >= 3.6.11",
	"svglib >= 1.4.1",
	"tqdm >= 4.63.0"
]
classifiers = [
	"Programming Language :: Python :: 3.8",
	"Programming Language :: Python :: 3.9",
	"Programming Language :: Python :: 3.10",
	"License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
	"Operating System :: OS Independent",
	"Natural Language :: English",
	"Development Status :: 4 - Beta",
	"Environment :: Console"
]

[project.scripts]
pawpyrus = "pawpyrus.pawpyrus:main"

[project.urls]
"Homepage" = "https://github.com/regnveig/pawpyrus"
"Bug Tracker" = "https://github.com/regnveig/pawpyrus/issues"
